Logo alignment fix
Fixes an issue where th logo wouldn't be vertically aligned with the menu. This was happening when the logo's aspect ratio became contained by the container width, versus it's height. The fix is to vertically center the image within the container *and* constrain by max-height and width.

This also provides a new variable $header-logo-padding so that a child theme may, more readily, change how much room is available to the logo. It's tweaked so that the WMGK logo looks nice in that spot, but more square logos may benefit from less padding.

The div that previously surrounded the logo and it's anchor was decided to be superfluous. Instead the anchor itself becomes the block level element tha constrains the image. This also made it easier to perform the vertical centering. All around a win.

Vertical centering likely won't work on IE8 due to the CSS rule used to make it happen. This will result in small alignment issues, which I think will be acceptable.

--- a/themes/greatermedia/assets/css/sass/components/_header.scss
+++ b/themes/greatermedia/assets/css/sass/components/_header.scss
@@ -45,25 +45,27 @@
 	@include span-columns(4);
 	@include omega;
 	height: 70px;
-	padding: 10px 0;
+	padding: $header-logo-padding 0;
 	line-height: 1;
+	position: relative;
 	@include bp(medium) {
+		height: 82px;
 		@include span-columns(2);
-	}
-	@include bp(large) {
-		@include span-columns(2);
-	}
-	@include bp(x-large) {
-		@include span-columns(2);
+		padding-left: $header-logo-padding;
 	}
 }
 
 .header__logo--img{
 	margin: 0 auto;
-	max-height: 50px;
-	text-align: center;
-	@include bp(large){
-		max-height: 57px;
+	max-height: 100%;
+	max-width: 100%;
+	height: auto;
+	width: auto;
+	position: relative;
+	top: 50%;
+	@include transform(translateY(-50%));
+	@include bp(medium){
+		//max-height: 57px;
 		text-align: left;
 	}
 }
